tests/samples/compile_errors/enum_uniqueness/duplicate_member.bas
Attribute VB_Name = "DupEnumMember"
Option Explicit

Public Enum Colors
    Red = 1
    Green = 2
    Red = 3   ' duplicate name
End Enum
